// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders checked when defaultChecked prop is passed as true 1`] = `
.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: #fff;
}

.c0 {
  font-size: 10px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  display: block;
  width: 100%;
  font-size: 10px;
  color: #687B8E;
  font-weight: 600;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c0 input:not(:checked) + [data-test='checkbox-facade'] {
  background-color: #fff;
}

.c0 input:not(:checked) + [data-test='checkbox-facade']:hover {
  border-color: #007aff;
}

.c0 input:checked + [data-test='checkbox-facade'] {
  background-color: #007aff;
  border-color: #007aff;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 20px;
  width: 20px;
  border-radius: 4px;
  cursor: pointer;
  border: 2px solid #d1d6db;
}

<label
  className="c0"
  color="gray"
  data-test="design-system-checkbox"
  disabled={false}
  fontSize="10px"
  fontWeight="bold"
  htmlFor="random_check_box"
>
  <input
    defaultChecked={true}
    disabled={false}
    id="random_check_box"
    name="random_check_box"
    onChange={[Function]}
    style={
      Object {
        "opacity": 0,
        "position": "absolute",
        "zIndex": -1,
      }
    }
    type="checkbox"
  />
  <div
    className="c1"
    data-test="checkbox-facade"
    disabled={false}
    size={20}
  >
    <svg
      className="c2"
      color="#fff"
      fill="currentcolor"
      height={16}
      viewBox="0 0 20 15"
      width={16}
    >
      <path
        d="M9.26 12.53l10.188-9.55a1.657 1.657 0 0 0 0-2.469c-.736-.681-1.93-.681-2.665 0l-10.188 9.55-3.378-3.13c-.735-.682-1.93-.682-2.665 0a1.657 1.657 0 0 0 0 2.469l3.379 3.13L6.595 15l2.665-2.47z"
      />
    </svg>
  </div>
</label>
`;

exports[`Checkbox renders disabled when disabled props is passed as true 1`] = `
.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: #fff;
}

.c0 {
  font-size: 10px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  display: block;
  width: 100%;
  font-size: 10px;
  color: #687B8E;
  font-weight: 600;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 0.7;
}

.c0 input:not(:checked) + [data-test='checkbox-facade'] {
  background-color: #fff;
  opacity: 0.7;
}

.c0 input:checked + [data-test='checkbox-facade'] {
  background-color: #d1d6db;
  border-color: #d1d6db;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 20px;
  width: 20px;
  border-radius: 4px;
  cursor: pointer;
  border: 2px solid #d1d6db;
}

<label
  className="c0"
  color="gray"
  data-test="design-system-checkbox"
  disabled={true}
  fontSize="10px"
  fontWeight="bold"
  htmlFor="random_check_box"
>
  <input
    defaultChecked={undefined}
    disabled={true}
    id="random_check_box"
    name="random_check_box"
    onChange={[Function]}
    style={
      Object {
        "opacity": 0,
        "position": "absolute",
        "zIndex": -1,
      }
    }
    type="checkbox"
  />
  <div
    className="c1"
    data-test="checkbox-facade"
    disabled={true}
    size={20}
  >
    <svg
      className="c2"
      color="#fff"
      fill="currentcolor"
      height={16}
      viewBox="0 0 20 15"
      width={16}
    >
      <path
        d="M9.26 12.53l10.188-9.55a1.657 1.657 0 0 0 0-2.469c-.736-.681-1.93-.681-2.665 0l-10.188 9.55-3.378-3.13c-.735-.682-1.93-.682-2.665 0a1.657 1.657 0 0 0 0 2.469l3.379 3.13L6.595 15l2.665-2.47z"
      />
    </svg>
  </div>
</label>
`;

exports[`Checkbox renders disabled when disabled props is passed as true 2`] = `
.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: #fff;
}

.c0 {
  font-size: 10px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  display: block;
  width: 100%;
  font-size: 10px;
  color: #687B8E;
  font-weight: 600;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 0.7;
}

.c0 input:not(:checked) + [data-test='checkbox-facade'] {
  background-color: #fff;
  opacity: 0.7;
}

.c0 input:checked + [data-test='checkbox-facade'] {
  background-color: #d1d6db;
  border-color: #d1d6db;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 20px;
  width: 20px;
  border-radius: 4px;
  cursor: pointer;
  border: 2px solid #d1d6db;
}

<label
  className="c0"
  color="gray"
  data-test="design-system-checkbox"
  disabled={true}
  fontSize="10px"
  fontWeight="bold"
  htmlFor="random_check_box"
>
  <input
    defaultChecked={true}
    disabled={true}
    id="random_check_box"
    name="random_check_box"
    onChange={[Function]}
    style={
      Object {
        "opacity": 0,
        "position": "absolute",
        "zIndex": -1,
      }
    }
    type="checkbox"
  />
  <div
    className="c1"
    data-test="checkbox-facade"
    disabled={true}
    size={20}
  >
    <svg
      className="c2"
      color="#fff"
      fill="currentcolor"
      height={16}
      viewBox="0 0 20 15"
      width={16}
    >
      <path
        d="M9.26 12.53l10.188-9.55a1.657 1.657 0 0 0 0-2.469c-.736-.681-1.93-.681-2.665 0l-10.188 9.55-3.378-3.13c-.735-.682-1.93-.682-2.665 0a1.657 1.657 0 0 0 0 2.469l3.379 3.13L6.595 15l2.665-2.47z"
      />
    </svg>
  </div>
</label>
`;

exports[`Checkbox renders with the theme passed specifically 1`] = `
.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: #fff;
}

.c0 {
  font-size: 10px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  display: block;
  width: 100%;
  font-size: 10px;
  color: #687B8E;
  font-weight: 600;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c0 input:not(:checked) + [data-test='checkbox-facade'] {
  background-color: #fff;
}

.c0 input:not(:checked) + [data-test='checkbox-facade']:hover {
  border-color: #007aff;
}

.c0 input:checked + [data-test='checkbox-facade'] {
  background-color: #007aff;
  border-color: #007aff;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 20px;
  width: 20px;
  border-radius: 4px;
  cursor: pointer;
  border: 2px solid #d1d6db;
}

<label
  className="c0"
  color="gray"
  data-test="design-system-checkbox"
  disabled={false}
  fontSize="10px"
  fontWeight="bold"
  htmlFor="random_check_box"
>
  <input
    defaultChecked={undefined}
    disabled={false}
    id="random_check_box"
    name="random_check_box"
    onChange={[Function]}
    style={
      Object {
        "opacity": 0,
        "position": "absolute",
        "zIndex": -1,
      }
    }
    type="checkbox"
  />
  <div
    className="c1"
    data-test="checkbox-facade"
    disabled={false}
    size={20}
  >
    <svg
      className="c2"
      color="#fff"
      fill="currentcolor"
      height={16}
      viewBox="0 0 20 15"
      width={16}
    >
      <path
        d="M9.26 12.53l10.188-9.55a1.657 1.657 0 0 0 0-2.469c-.736-.681-1.93-.681-2.665 0l-10.188 9.55-3.378-3.13c-.735-.682-1.93-.682-2.665 0a1.657 1.657 0 0 0 0 2.469l3.379 3.13L6.595 15l2.665-2.47z"
      />
    </svg>
  </div>
</label>
`;

exports[`Checkbox renders without the theme passed specifically 1`] = `
.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: #fff;
}

.c0 {
  font-size: 10px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  display: block;
  width: 100%;
  font-size: 10px;
  color: #687B8E;
  font-weight: 600;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c0 input:not(:checked) + [data-test='checkbox-facade'] {
  background-color: #fff;
}

.c0 input:not(:checked) + [data-test='checkbox-facade']:hover {
  border-color: #007aff;
}

.c0 input:checked + [data-test='checkbox-facade'] {
  background-color: #007aff;
  border-color: #007aff;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 20px;
  width: 20px;
  border-radius: 4px;
  cursor: pointer;
  border: 2px solid #d1d6db;
}

<label
  className="c0"
  color="gray"
  data-test="design-system-checkbox"
  disabled={false}
  fontSize="10px"
  fontWeight="bold"
  htmlFor="random_check_box"
>
  <input
    defaultChecked={undefined}
    disabled={false}
    id="random_check_box"
    name="random_check_box"
    onChange={[Function]}
    style={
      Object {
        "opacity": 0,
        "position": "absolute",
        "zIndex": -1,
      }
    }
    type="checkbox"
  />
  <div
    className="c1"
    data-test="checkbox-facade"
    disabled={false}
    size={20}
  >
    <svg
      className="c2"
      color="#fff"
      fill="currentcolor"
      height={16}
      viewBox="0 0 20 15"
      width={16}
    >
      <path
        d="M9.26 12.53l10.188-9.55a1.657 1.657 0 0 0 0-2.469c-.736-.681-1.93-.681-2.665 0l-10.188 9.55-3.378-3.13c-.735-.682-1.93-.682-2.665 0a1.657 1.657 0 0 0 0 2.469l3.379 3.13L6.595 15l2.665-2.47z"
      />
    </svg>
  </div>
</label>
`;

exports[`Checkbox updates and fires callback when clicked (when enabled) 1`] = `
.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: #fff;
}

.c0 {
  font-size: 10px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  display: block;
  width: 100%;
  font-size: 10px;
  color: #687B8E;
  font-weight: 600;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c0 input:not(:checked) + [data-test='checkbox-facade'] {
  background-color: #fff;
}

.c0 input:not(:checked) + [data-test='checkbox-facade']:hover {
  border-color: #007aff;
}

.c0 input:checked + [data-test='checkbox-facade'] {
  background-color: #007aff;
  border-color: #007aff;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 20px;
  width: 20px;
  border-radius: 4px;
  cursor: pointer;
  border: 2px solid #d1d6db;
}

<label
  className="c0"
  color="gray"
  data-test="design-system-checkbox"
  disabled={false}
  fontSize="10px"
  fontWeight="bold"
  htmlFor="random_check_box"
>
  <input
    defaultChecked={undefined}
    disabled={false}
    id="random_check_box"
    name="random_check_box"
    onChange={[Function]}
    style={
      Object {
        "opacity": 0,
        "position": "absolute",
        "zIndex": -1,
      }
    }
    type="checkbox"
  />
  <div
    className="c1"
    data-test="checkbox-facade"
    disabled={false}
    size={20}
  >
    <svg
      className="c2"
      color="#fff"
      fill="currentcolor"
      height={16}
      viewBox="0 0 20 15"
      width={16}
    >
      <path
        d="M9.26 12.53l10.188-9.55a1.657 1.657 0 0 0 0-2.469c-.736-.681-1.93-.681-2.665 0l-10.188 9.55-3.378-3.13c-.735-.682-1.93-.682-2.665 0a1.657 1.657 0 0 0 0 2.469l3.379 3.13L6.595 15l2.665-2.47z"
      />
    </svg>
  </div>
</label>
`;
